fix: 동일한 패키지 삭제